Anonymous | Login | 2021-01-17 18:56 MSK | ![]() |
My View | View Issues | Change Log | Roadmap |
View Issue Details [ Jump to Notes ] [ Related Changesets ] | [ Issue History ] [ Print ] | ||||||||
ID | Project | Category | View Status | Date Submitted | Last Update | ||||
0031877 | Open CASCADE | [OCCT] OCCT:DRAW | public | 2020-10-25 08:22 | 2020-12-02 17:13 | ||||
Reporter | abv | ||||||||
Assigned To | abv | ||||||||
Priority | normal | Severity | minor | ||||||
Status | closed | Resolution | fixed | ||||||
Platform | OS | OS Version | |||||||
Product Version | |||||||||
Target Version | [OCCT] 7.5.0 | Fixed in Version | [OCCT] 7.5.0 | ||||||
Summary | 0031877: DRAW - some Visualization commands are not protected against uninitialized viewer | ||||||||
Description | The issue comes from analysis of issue 0031817 - some DRAW commands in ViewerTest use global AIS_InteractiveContext object returned by global function TheAISContext() without checking it for being non-null. Thus all they will generate exception instead of reasonable message in the case if viewer is not initialized (vinit is not called). | ||||||||
Steps To Reproduce | pload VISUALIZATION vsetdispmode 1 vpickshapes vsize vplanetri a | ||||||||
Tags | No tags attached. | ||||||||
Test case number | bugs/demo/bug31877 | ||||||||
Attached Files | |||||||||
![]() |
||||||
|
![]() |
|
(0096251) git (administrator) 2020-10-25 08:43 |
Branch CR31877 has been created by abv. SHA-1: f41fd243b6aea64176d1d1f36ff5696c4eca31da Detailed log of new commits: Author: abv Date: Fri Oct 2 06:54:01 2020 +0300 0031877: DRAW - some Visualization commands are not protected against uninitialized viewer Added protections in DRAW commands against accessing Null context Added test bugs demo bug31877 |
(0096252) abv (manager) 2020-10-25 10:52 |
Fix pushed to CR31877 and tested, see Jenkins job CR31877-abv (note that failure of sample-java build is due to some other reason - it fails in all recent builds). Please review. |
(0096342) bugmaster (administrator) 2020-10-28 16:56 |
Combination - OCCT branch : OCCT-750 master SHA - 5445eaeed56eb279c0ab00af552e614f1bbef9b6 a206de37fbfa0bf71bd534ae47192bbec23b8522 Products branch : OCCT-750 SHA - ebaa925ad092ce36a9743c12e5403ea978cb3417 was compiled on Linux, MacOS and Windows platforms and tested in optimize mode. Number of compiler warnings: No new/fixed warnings Regressions/Differences/Improvements: No regressions/differences CPU differences: Debian80-64: OCCT Total CPU difference: 17992.300000000254 / 17994.53000000008 [-0.01%] Products Total CPU difference: 12161.930000000115 / 12171.670000000115 [-0.08%] Windows-64-VC14: OCCT Total CPU difference: 19710.375 / 19728.265625 [-0.09%] Products Total CPU difference: 13569.53125 / 13538.390625 [+0.23%] Image differences : No differences that require special attention Memory differences : No differences that require special attention |
(0096560) git (administrator) 2020-11-05 15:59 |
Branch CR31877 has been deleted by inv. SHA-1: f41fd243b6aea64176d1d1f36ff5696c4eca31da |
![]() |
|||
occt: master f41fd243
Timestamp: 2020-10-02 03:54:01 Author: abv Committer: abv [ Details ] [ Diff ] |
0031877: DRAW - some Visualization commands are not protected against uninitialized viewer Added protections in DRAW commands against accessing Null context Added test bugs demo bug31877 |
||
mod - src/ViewerTest/ViewerTest.cxx | [ Diff ] [ File ] | ||
mod - src/ViewerTest/ViewerTest_ObjectCommands.cxx | [ Diff ] [ File ] | ||
add - tests/bugs/demo/bug31877 | [ Diff ] [ File ] | ||
![]() |
|||
Date Modified | Username | Field | Change |
2020-10-25 08:22 | abv | New Issue | |
2020-10-25 08:22 | abv | Assigned To | => abv |
2020-10-25 08:23 | abv | Relationship added | related to 0031817 |
2020-10-25 08:43 | git | Note Added: 0096251 | |
2020-10-25 10:52 | abv | Note Added: 0096252 | |
2020-10-25 10:52 | abv | Status | new => resolved |
2020-10-25 10:52 | abv | Assigned To | abv => kgv |
2020-10-25 15:11 | kgv | Assigned To | kgv => bugmaster |
2020-10-25 15:11 | kgv | Status | resolved => reviewed |
2020-10-28 16:56 | bugmaster | Note Added: 0096342 | |
2020-10-28 16:56 | bugmaster | Status | reviewed => tested |
2020-10-28 16:56 | bugmaster | Test case number | => bugs/demo/bug31877 |
2020-10-31 12:54 | abv | Changeset attached | => occt master f41fd243 |
2020-10-31 12:54 | abv | Assigned To | bugmaster => abv |
2020-10-31 12:54 | abv | Status | tested => verified |
2020-10-31 12:54 | abv | Resolution | open => fixed |
2020-11-05 15:59 | git | Note Added: 0096560 | |
2020-12-02 16:22 | emo | Fixed in Version | => 7.5.0 |
2020-12-02 17:13 | emo | Status | verified => closed |
Copyright © 2000 - 2021 MantisBT Team |