0031877: DRAW - some Visualization commands are not protected against uninitialized viewer

Added protections in DRAW commands against accessing Null context

Added test bugs demo bug31877